# fakeapi

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  render.yaml
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: architecture.md  ci.md  models.md  postman_collection.json
fakeapi/: conftest.py  main.py  seed.py  settings.py
fakeapi/admin/: routers.py
fakeapi/api/admin/: routers.py
fakeapi/api/projects/: exceptions.py  models.py  provider.py  routers.py  services.py
fakeapi/api/projects/tests/: test_routers.py
fakeapi/api/tasks/: exceptions.py  models.py  provider.py  routers.py  services.py
fakeapi/api/users/: enums.py  models.py  provider.py  routers.py  services.py
fakeapi/api/workspaces/: dependencies.py  models.py  routers.py  services.py
fakeapi/common/: decorators.py  enums.py  limiter.py  middleware.py  pagination.py  routers.py
fakeapi/projects/: enums.py  models.py  routers.py  services.py
fakeapi/projects/tests/: test_routers.py
fakeapi/smoke/: conftest.py  test_projects.py  test_tasks.py  test_users.py
fakeapi/storage/: __init__.py  base.py  enums.py  memory.py
fakeapi/tasks/: data.py  enums.py  models.py  provider.py  routers.py  services.py
fakeapi/tasks/tests/: conftest.py  test_routers.py  test_tasks.py
fakeapi/templates/: index.html
fakeapi/users/: exceptions.py  models.py  routers.py  services.py
fakeapi/users/tests/: test_routers.py
fakeapi/workspaces/: routers.py  services.py
fakeapi/workspaces/tests/: test_routers.py
smoke/: test_tasks.py  test_users.py
(+3 files in other folders)
