[tool.poetry]
name = "fakeapi"
version = "0.1.0"
description = "A Fake API for testing purposes"
authors = ["Cristian Rubio <cristianrubioa@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.8"}
faker = "^35.2.0"
pydantic-settings = "^2.7.1"

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
ruff = "^0.1.14"
isort = "^5.13.2"
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
